노트 라우팅 수정, 노트 강조표시

--- a/src/assets/scss/notebook.scss
+++ b/src/assets/scss/notebook.scss
@@ -97,11 +97,7 @@ section.contact span.logo-wrapper img {
     height: 1rem;
 }
 
-.note .active {
-    box-shadow: 0 0 0.25rem #5c4bf17a;
+.note.active {
+    box-shadow: 0 0 0.25rem #7574C2;
     will-change: filter;
-}
-
-.dark .note.active {
-    box-shadow: 0 0 0.25rem #ff3e00aa;
 }
