--- a/src/assets/scss/notebook.scss
+++ b/src/assets/scss/notebook.scss
@@ -61,7 +61,7 @@ main.main {
 main.main article.note {
     box-sizing: border-box;
     padding: 0.5rem;
-    margin: 0.5rem;
+    margin: 0 0.5rem 0 0.5rem;
     flex-grow: 1;
 }
 
